apps/web/contents/docs/v1.4.x/getting-started/changelog/index.mdx
---
title: Changelog
description: See the changes and updates in our package.
---

## Overview

Welcome to the `Changelog` section. Here, you'll find all the information you need about the changes and updates in our package.

## V 1.4.0

- Add New Template
  - Delete all template on folder `templates/*`
  - Terminate function `replicateTemplates()` because it is no longer used
  - Add new template
    - Laravel + Filament

## V 1.3.9

- Fix error generate project Laravel Breeze API w/ Next.js App Router (Tailwind + TypeScript)

## V 1.3.8

- Refactor CLI script
- Change logic for clone frontend template
- Delete template for frontend on directory `templates/*`

## V 1.3.5

- Update Template of React.js (Tailwindcss + TypeScript).
- Add New Template
  - React.js (Tailwind + JavaScript)

## V 1.2.5

- Little Update on CLI Interface
- Add New Template
  - React.js (Tailwind + Typescript)
  - Laravel Breeze API w/ Next.js App Router (Tailwind + TypeScript)

## V 1.1.5

- Update Template of Next.js (Tailwindcss + JavaScript).
- Fix some bugs on Template Next.js (Tailwindcss + TypeScript).

## V 1.0.5

- Initial release of BikinProject.
- Added 2 Templates of Next.js (TypeScript & JavaScript).

## Additional Information

For more information about the changes and updates in our application, please refer to the [GitHub repository](https://github.com/nufalkbrr/bikinproject).
